# showqr-cpp

./: .gitignore  .gitmodules  CMakeLists.txt
qrencode/: CMakeLists.txt  QRDataBlocks.h  QrCode.cpp  QrCode.hpp
showqr-fltk/: CMakeLists.txt  Makefile  showqr.cxx
showqr-qt/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
